--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -44,7 +44,7 @@
 
     <div class="About-presenter">
         <a name="About presenter"></a>
-        <h3 id="Student">Виконував цю роботу: <a href="">Антипов Олександр Миколайович</a></h3>
+        <h3 id="Student">Виконував цю роботу: <a href="https://github.com/11Aleks/project1">Антипов Олександр Миколайович</a></h3>
         <h3 id="Group">Студент групи: ІО-21</h3>
     </div>
 </div>
